src/test/deca/context/invalid/without_class/incompatible_type_neq_float_string.deca
// Description:
//    Error : operator equals not defined with type string
//
// Result:
//    INCOMPATIBLE_TYPE_OPERATOR: Type \(.\)\+ is incompatible with type \(.\)\+ for the operator \(.\)\+
//    line 9
{
    float a = 1.0;
    boolean result = a == "Hello"; 
}